# opengl-renderer

./: .clang-format  .gitignore  CMakeLists.txt  Game Engine VS.sln  README.md
Editor/: Editor.vcxproj
Editor/assets/shaders/: skybox.frag
Editor/src/: main.cpp
Engine/: Engine.vcxproj
Engine/include/: Scale.hpp  Scene.hpp  camera.hpp  gameObject.hpp  input.hpp  model.hpp  render.hpp  shader.hpp  skybox.hpp  texture.hpp  ui.hpp  utils.hpp
Engine/src/: Scene.cpp  assetLoader.cpp  camera.cpp  gameObject.cpp  input.cpp  objModel.cpp  render.cpp  shader.cpp  skybox.cpp  texture.cpp  ui.cpp  utils.cpp
assets/: assets.vcxitems
assets/shaders/: default.frag  default.vert  skybox.frag  skybox.vert
editor/: CMakeLists.txt
editor/src/: main.cpp  ui.cpp  ui.hpp
engine/: CMakeLists.txt
engine/src/: EcsRegistry.cpp  EcsRegistry.hpp  GameObject.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Texture.cpp  Texture.hpp  input.cpp  input.hpp  logging.cpp  math.hpp  utils.cpp  utils.hpp
engine/src/components/: CameraComponent.hpp  MeshComponent.cpp
engine/src/physics/: AABB.cpp  AABB.hpp
engine/src/systems/: cameraMovementSystem.cpp  renderSystem.cpp  systems.hpp
include/: defs.hpp  input.hpp  render.hpp  scene.hpp  ui.hpp  utils.hpp  world.hpp
include/game/: cube.hpp  game.hpp
include/game/world/: chunk.hpp  terrain.hpp  world.hpp
include/game/world/block/: block.hpp
include/render/: Transform.hpp  assets.hpp  camera.hpp  context.hpp  gameObject.hpp  model.hpp  render.hpp  scale.hpp  shader.hpp  skybox.hpp  texture.hpp
src/: Component.hpp  EcsRegistry.cpp  EcsRegistry.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Texture.cpp  input.cpp  input.hpp  main.cpp  math.hpp  objModel.cpp  ui.cpp  utils.cpp  utils.hpp
src/assets/shaders/: default.frag  default.vert  skybox.vert  vertex.glsl
src/components/: CameraComponent.cpp  CameraComponent.hpp  MaterialComponent.hpp  MeshComponent.cpp  MeshComponent.hpp
src/game/: game.cpp
src/game/world/: chunk.cpp  terrain.cpp  terrain_gen.cpp
src/game/world/block/: block.cpp
src/render/: assetLoader.cpp  camera.cpp  cube.cpp  gameObject.cpp  mesh.cpp  render.cpp  scene.cpp  shader.cpp  skybox.cpp  texture.cpp  textureLoader.cpp  ui.cpp  vertex_buffer.cpp
src/systems/: cameraMovementSystem.cpp  cameraMovementSystem.hpp  renderSystem.cpp  renderSystem.hpp  systems.hpp
src/world/: block.cpp  chunk.cpp  terrain_gen.cpp
